Fixed sidebar appears behind trends and announcements

--- a/style.css
+++ b/style.css
@@ -350,6 +350,7 @@ textarea {
 	}
 
 	main aside {
+		position: static;
 		grid-row: 4/5;
 	}
 	main {
